Added header checking and data integrity checking to downloads